[package]
name = "grid"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
grid_derive = { path = "crates/grid_derive", version = "0.1" }

[dev-dependencies]
bevy = "0.10"
criterion = { version = "0.4", features = ["html_reports"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]


[[bench]]
name = "ugrid"
harness = false

[[bench]]
name = "dgrid"
harness = false